# legal-assistant-agent

./: .gitignore  .mise.toml  .sample.env  README.md  export_graph.ipynb  main.py  pyproject.toml  react.py  workflow.py
tools/: contract_qa_assistant.py  contract_summarizer.py  legal_qa_assistant.py  search_contract_files.py  search_keyword_creator.py  web_search.py
